# gbtools

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
gbtools/: Genbank.py  cli.py  utils.py
gbtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gbtools/data/: AB050936.1.gbk  EU051634.1.gbk
tests/: test_config.py
