[project]
name = "gbtools"
authors = [
  {name = "Jan Emmanuel Samson", email = "jegsamson.dev@gmail.com"},
]
version = "0.1.0"
description = "An Python interface for downloading and parsing Genbank records from NCBI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.85",
    "click>=8.1.8",
    "ipython>=8.34.0",
    "marimo>=0.11.26",
    "polars>=1.26.0",
    "rich>=13.9.4",
    "setuptools>=78.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
gbtools = "gbtools.cli:app"
